[package]
name = "twilight-commands"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
twilight-model = "0.17.0"
twilight-util = { version = "0.17.0", features = ["builder"] }
twilight_commands_derive = { path = "./twilight_commands_derive" }

[workspace]
members = ["twilight_commands_derive"]
